API (noSQL) y método solicitado
