# routes/api.php
@@ -19,4 +19,5 @@ Route::resource('tutores','Relacional\TutorController');
 Route::resource('formaciontutores','Relacional\FormacionTutorController');
 Route::resource('asignaturas','Relacional\AsignaturaController');
 Route::resource('asignaturatutores','Relacional\AsignaturaTutorController');
+Route::resource('historicos','NoRelacional\HistoricoController');
 Route::post('mail', 'mailController@contact')->name('enviar');
